--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
   }
 }
 .editor{
-  /* background-color: red; */
+  background-color: whitesmoke;
   margin-top: 3rem;
   height: 100%;
   /* border: 1px solid black; */
