small changes towards completion

--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@
   }
 }
 .editor{
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
   margin-top: 3rem;
   height: 100%;
   /* border: 1px solid black; */
